Added binary file support